# texgenpy

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  texgen.pxd  texgen.pyx  texgenpack.pyx  texgenpack_py.cpp  texgenpack_py.h
test/: tests.py
texgenpack/: README.md  astc.c  buffer.c  calibrate.c  file.c  image.c  texgenpack.c  texgenpack.h  texture.c
