[metadata]
name = texgenpack_py
version = 0.0.1
description = Python wrapper around detex
author = K0lb3
url = https://github.com/K0lb3/texgenpack_py/
download_url = https://github.com/K0lb3/texgenpack_py/tarball/master
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Multimedia :: Graphics

[flake8]
ignore = W191
